--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html {
   font-size: 10px;
-  color: canvastext;
 }
 
 body {
@@ -9,13 +8,12 @@ body {
   line-height: 1.5;
   text-align: center;
   color: white;
-  margin: 10;
+  margin: 0;
 }
 
 #main {
   margin: 30px, 8px;
   padding: 20px;
-  border-radius: 5px;
   background: #0D5311;
 }
 
@@ -26,13 +24,14 @@ h1 {
 }
 
 figure {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #img-div {
   background: #E3E00A;
   padding: 15px;
-  margin: 0;
   border-radius: 10px;
 }
 
@@ -49,7 +48,7 @@ figcaption {
 }
 
 #img-caption {
-  margin: 15px 0 5px 0;
+  margin: 25px 0 10px 0;
   color: black;
 }
 
